# lloberon

./: .clang-format  .gitmodules  CMakeLists.txt  TODOs.md
cmake/modules/: add-lloberon.cmake
include/basic/: diagnostic.def  diagnostic.h  token-kinds.def  token-kinds.h  version.h  version.inc.in
include/decl/: base-type.h  const.h  declaration-with-scope.h  declaration.h  module.h  procedure.h  type.h  variable.h
include/expr/: binary.h  bool.h  call.h  const.h  expression.h  float.h  int-literal.h  integer.h  label.h  nil.h  procedure.h  real.h  unary.h  variable.h
include/lexer/: lexer.h  token.h
include/lloberon/ast/: ast.h  declaration.h  ident-def.h
include/lloberon/basic/: diagnostic.def  diagnostic.h  token-kinds.h  version.h
include/lloberon/lexer/: lexer.h  token.h
include/lloberon/parser/: parser.h
include/lloberon/sema/: actual_parameters.h  array-type.h  assignment-or-procedure-call.h  base-type.h  case-list.h  case-statement.h  case.h  declaration-sequence.h  declaration.h  designator.h  expression-list.h  factor.h  field-list-sequence.h  field-list.h  for-statement.h  formal-parameter-section.h  formal-parameters.h  formal_type.h  ident-def.h  pointer-type.h  procedure-declaration.h  procedure-type.h  qual-ident.h  record-type.h  repeat-statement.h  scope.h  statement_sequence.h  term.h  type.h  var-declaration.h  while-statement.h
include/modules/: out.h
include/parser/: parser.h
include/sema/: actual-parameters.h  array-type.h  assignment-or-procedure-call.h  base-type.h  case-list.h  case-statement.h  case.h  const-expression.h  context.h  declaration-sequence.h  declaration.h  designator.h  expression-list.h  expression.h  factor.h  field-list-sequence.h  field-list.h  for-statement.h  formal-parameter-section.h  formal-parameters.h  formal-type.h  ident-def.h  if-statement.h  label.h  length.h  pointer-type.h  procedure-body.h  procedure-declaration.h  procedure-heading.h  procedure-type.h  qual-ident.h  record-type.h  repeat-statement.h  scope.h  simple-expression.h  statement-sequence.h  statement.h  term.h  type-declaration.h  type.h  (+2 more)
include/stmt/: case.h  for.h  if.h  repeat.h  statement.h  while.h
include/type/: array.h  base.h  pointer.h  procedure.h  record.h  reference.h  type.h
lib/: CMakeLists.txt
lib/basic/: CMakeLists.txt  diagnostic.cpp  token-kinds.cpp  version.cpp
lib/lexer/: CMakeLists.txt  lexer.cpp
lib/lexer-tests/: CMakeLists.txt  lexer-tests.cpp
lib/lloberon/: CMakeLists.txt
lib/lloberon/basic/: diagnostic.cpp  token-kinds.cpp
lib/lloberon/decl/: base-type.cpp  type.cpp
lib/parser/: CMakeLists.txt  parse-actual-parameters.cpp  parse-array-type.cpp  parse-assignment-or-procedure-call.cpp  parse-base-type.cpp  parse-case-list.cpp  parse-case-statement.cpp  parse-case.cpp  parse-const-declaration.cpp  parse-const-expression.cpp  parse-declaration-sequence.cpp  parse-designator.cpp  parse-element.cpp  parse-expression-list.cpp  parse-expression.cpp  parse-factor.cpp  parse-field-list-sequence.cpp  parse-field-list.cpp  parse-for-statement.cpp  parse-formal-parameter-section.cpp  parse-formal-parameters.cpp  parse-formal-type.cpp  parse-ident-def.cpp  parse-ident-list.cpp  parse-if-statement.cpp  parse-import-list.cpp  parse-import.cpp  parse-label-range.cpp  parse-label.cpp  parse-length.cpp  parse-module.cpp  parse-pointer-type.cpp  parse-procedure-body.cpp  parse-procedure-declaration.cpp  parse-procedure-heading.cpp  parse-procedure-type.cpp  parse-qual-ident.cpp  parse-record-type.cpp  parse-repeat-statement.cpp  parse-set.cpp  (+9 more)
lib/sema/: CMakeLists.txt  scope.cpp
lib/tests/: CMakeLists.txt  lexer-tests.cpp  module-declaration-tests.cpp  parser-tests.cpp  scope-tests.cpp  type-declaration-tests.cpp  var-declaration-tests.cpp
liboberon/: CMakeLists.txt
liboberon/basic/: diagnostic.cpp  token-kinds.cpp
liboberon/decl/: module.cpp  procedure.cpp
liboberon/expr/: const.cpp  expression.cpp
liboberon/lexer/: lexer.cpp
liboberon/parser/: CMakeLists.txt  parse-actual-parameters.cpp  parse-array-type.cpp  parse-assignment-or-procedure-call.cpp  parse-base-type.cpp  parse-case-statement.cpp  parse-const-expression.cpp  parse-designator.cpp  parse-element.cpp  parse-expression-list.cpp  parse-expression.cpp  parse-factor.cpp  parse-field-list-sequence.cpp  parse-for-statement.cpp  parse-formal-parameters.cpp  parse-ident-def.cpp  parse-ident-list.cpp  parse-if-statement.cpp  parse-import-list.cpp  parse-import.cpp  parse-label.cpp  parse-length.cpp  parse-module.cpp  parse-procedure-body.cpp  parse-procedure-declaration.cpp  parse-procedure-heading.cpp  parse-procedure-type.cpp  parse-simple-expression.cpp  parse-statement-sequence.cpp  parse-term.cpp  parse-type-declaration.cpp  parse-type.cpp  parse-variable-declaration.cpp  parser.cpp
liboberon/sema/: context.cpp  scope.cpp
liboberon/type/: procedure.cpp  type.cpp
lloberon/: CMakeLists.txt  driver.cpp
modules/: CMakeLists.txt  out.c  out.cxx
tests/: CMakeLists.txt  Hello.mod
tests/decl/: module-tests.cpp  type-tests.cpp  variable-tests.cpp
tests/modules/: out-tests.cpp
tests/parser-tests/: actual-parameters-tests.cpp  assignment-or-procedure-call-tests.cpp  case-tests.cpp  declaration-sequence-tests.cpp  expression-tests.cpp  factor-tests.cpp  field-list-sequence-tests.cpp  formal-parameters-tests.cpp  ident-def-tests.cpp  ident-list-tests.cpp  import-list-tests.cpp  import-tests.cpp  label-range-tests.cpp  length-tests.cpp  module-tests.cpp  parser-tests.cpp  parser-tests.h  procedure-body-tests.cpp  procedure-declaration-tests.cpp  procedure-heading-tests.cpp  procedure-type-tests.cpp  qual-ident-tests.cpp  record-type-tests.cpp  repeat-statement-tests.cpp  set-tests.cpp  simple-expression-tests.cpp  statement-sequence-tests.cpp  term-tests.cpp  type-declaration-tests.cpp  while-statement-tests.cpp
tools/: CMakeLists.txt
tools/driver/: CMakeLists.txt  driver.cpp
tools/tests/: CMakeLists.txt  lexer-tests.cpp  module-declaration-tests.cpp  scope-tests.cpp  type-declaration-tests.cpp  var-declaration-tests.cpp
(+165 files in other folders)
