add_library(liboberon
        basic/diagnostic.cpp
        basic/token-kinds.cpp
        decl/procedure.cpp
        decl/module.cpp
        expr/const.cpp
        expr/expression.cpp
        lexer/lexer.cpp
        lexer/token.cpp
        parser/parse-actual-parameters.cpp
        parser/parse-array-type.cpp
        parser/parse-assignment-or-procedure-call.cpp
        parser/parse-base-type.cpp
        parser/parse-case.cpp
        parser/parse-case-list.cpp
        parser/parse-case-statement.cpp
        parser/parse-const-declaration.cpp
        parser/parse-const-expression.cpp
        parser/parse-declaration-sequence.cpp
        parser/parse-designator.cpp
        parser/parse-element.cpp
        parser/parse-expression.cpp
        parser/parse-expression-list.cpp
        parser/parse-factor.cpp
        parser/parse-field-list.cpp
        parser/parse-field-list-sequence.cpp
        parser/parse-for-statement.cpp
        parser/parse-formal-parameter-section.cpp
        parser/parse-formal-parameters.cpp
        parser/parse-formal-type.cpp
        parser/parse-ident-def.cpp
        parser/parse-ident-list.cpp
        parser/parse-if-statement.cpp
        parser/parse-import.cpp
        parser/parse-import-list.cpp
        parser/parse-label.cpp
        parser/parse-label-range.cpp
        parser/parse-length.cpp
        parser/parse-module.cpp
        parser/parse-pointer-type.cpp
        parser/parse-procedure-body.cpp
        parser/parse-procedure-declaration.cpp
        parser/parse-procedure-heading.cpp
        parser/parse-procedure-type.cpp
        parser/parse-qual-ident.cpp
        parser/parse-record-type.cpp
        parser/parse-repeat-statement.cpp
        parser/parse-set.cpp
        parser/parse-simple-expression.cpp
        parser/parse-statement.cpp
        parser/parse-statement-sequence.cpp
        parser/parse-term.cpp
        parser/parse-type.cpp
        parser/parse-type-declaration.cpp
        parser/parse-variable-declaration.cpp
        parser/parse-while-statement.cpp
        parser/parser.cpp
        sema/context.cpp
        sema/scope.cpp
        type/pointer.cpp
        type/type.cpp
)

